chapter08翻译了一部分